welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:3: error: type mismatch;
 found   : Int(20)
 required: Boolean
  if((10<=a<=20)||(10<=b<=20))
             ^in1020:3: error: type mismatch;
 found   : Int(20)
 required: Boolean
  if((10<=a<=20)||(10<=b<=20))
                          ^